backend: use put instead of patch
