# backend/src/cars/dto/update-car.dto.ts
@@ -1,6 +1,7 @@
 import { PartialType } from '@nestjs/swagger';
-import { CarDetailsDto, CreateCarDto } from './create-car.dto';
+import { CreateCarDto } from './create-car.dto';
 
-export class UpdateCarDto extends PartialType(CreateCarDto) {
-  override carDetails?: Partial<CarDetailsDto[]>;
-}
+/**
+ * @deprecated Use CreateCarDto
+ */
+export class UpdateCarDto extends PartialType(CreateCarDto) {}
